--- a/package.json
+++ b/package.json
@@ -20,22 +20,36 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.1",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-form": "^1.14.2",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "better-auth": "^1.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk-base": "^0.0.6",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.41.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.6",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
@@ -46,8 +60,9 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
