--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
