--- a/package.json
+++ b/package.json
@@ -55,26 +55,29 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
+    "@next/eslint-plugin-next": "^15.4.4",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "drizzle-kit": "^0.30.5",
-    "eslint": "^9.23.0",
+    "eslint": "^9.32.0",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.38.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
