--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,10 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+DATABASE_URL=
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL="http://localhost:3000"
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/memo-directory"
-
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+DEFAULT_GROUP_NAME="Bookmarks"
+DEFAULT_GROUP_COLOR="#FEE685"
